[package]
name = "rast"
version = "0.1.0-alpha.0"
authors = ["Daniel Harrison"]
edition = "2018"
license = "Apache-2.0"
keywords = ["distributed", "consensus", "raft"]
categories = ["algorithms"]
description = "A toy implementation of the raft consistency protocol focused on speed"
documentation = "https://docs.rs/rast"
repository = "https://github.com/danhhz/rast"
readme = "README.md"

[badges]
circle-ci = { repository = "danhhz/rast", branch = "dev" }
maintenance = { status = "experimental" }

[features]
runtime = []

[dependencies]
log = { version = "0.4", optional = true }

[dev-dependencies]
rand = { version = "0.7", features = ["small_rng"] }
extreme = { version = "666.666.666666" }
env_logger = { version = "0.7" }
