[package]

name = "benchmark"
version = "0.0.0"
authors = ["Daniel Harrison <daniel.harrison@gmail.com>"]
edition = "2018"
default-run = "benchmark"

[[bin]]
name = "benchmark"
path = "benchmark.rs"

[[bin]]
name = "run_all_benchmarks"
path = "run_all.rs"

[dependencies]
capnp_runtime = { path = "../runtime" }
