[package]
# TODO: Rename this package, capnp_runtime is taken.
name = "capnp_runtime"
version = "0.1.0-alpha.0"
authors = ["Daniel Harrison <daniel.harrison@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", optional = true }

[dev-dependencies]
capnp_runtime = { path = "../runtime" }
serde_json = "1.0.57"
